changes based on ppt
changes based on ppt

--- a/services.html
+++ b/services.html
@@ -966,7 +966,7 @@
                 <p class="lead" id="mission-design">
 
 
-                  THESPACELABS is guided by the a rare team of vetrons in the area of space technology, having more than 35 years of expertise.  The team is well versed from the mission definition to launch and flight data analysis.   The team can develop, design and guide challening space endeavors.  We offer services in the following areas
+                  SPACELABS is guided by the a rare team of vetrons in the area of space technology, having more than 35 years of expertise.  The team is well versed from the mission definition to launch and flight data analysis.   The team can develop, design and guide challening space endeavors.  We offer services in the following areas
 
                 </p>
                 <p>
