--- a/products.html
+++ b/products.html
@@ -963,7 +963,7 @@
                 </h1>
                 <p class="lead">
 
-                  THESPACELABS’s products are primarily designed for aerospace sector where perfection and precision are the primary needs.  Simple design, user friendly features and quality outputs keep our products distinct in the market.  Quality and reliability are taken care in every stage of product evolution.  Our products cater to Launch Vehicles, Satellites, Missiles, UAV and Aircrafts. THESPACELABS is also committed to provide an ERP based solution for data handling from initiation of mission design to launch and post flight.
+                  SPACELABS’s products are primarily designed for aerospace sector where perfection and precision are the primary needs.  Simple design, user friendly features and quality outputs keep our products distinct in the market.  Quality and reliability are taken care in every stage of product evolution.  Our products cater to Launch Vehicles, Satellites, Missiles, UAV and Aircrafts. SPACELABS is also committed to provide an ERP based solution for data handling from initiation of mission design to launch and post flight.
 
                 </p>
                 <p>
