--- a/overview.html
+++ b/overview.html
@@ -1218,7 +1218,7 @@
       </div>
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex ">
-        <li class="ms-3"><a class="text" href="#"><svg class="bi" width="24" height="24">
+        <!--    <li class="ms-3"><a class="text" href="#"><svg class="bi" width="24" height="24">
               <use xlink:href="#twitter"></use>
             </svg></a></li>
         <li class="ms-3"><a class="text" href="#"><svg class="bi" width="24" height="24">
@@ -1226,7 +1226,7 @@
             </svg></a></li>
         <li class="ms-3"><a class="text" href="#"><svg class="bi" width="24" height="24">
               <use xlink:href="#facebook"></use>
-            </svg></a></li>
+            </svg></a></li>    -->
             <li class="ms-3"><a target="_blank"  class="text" href="https://www.linkedin.com/company/thespacelabs/">
 
               <svg  width="24" height="24" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
