--- a/saras6.html
+++ b/saras6.html
@@ -1028,7 +1028,7 @@
       </div>
 
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex ">
-        <li class="ms-3"><a class="text" href="#"><svg class="bi" width="24" height="24">
+        <!--    <li class="ms-3"><a class="text" href="#"><svg class="bi" width="24" height="24">
               <use xlink:href="#twitter"></use>
             </svg></a></li>
         <li class="ms-3"><a class="text" href="#"><svg class="bi" width="24" height="24">
@@ -1036,7 +1036,7 @@
             </svg></a></li>
         <li class="ms-3"><a class="text" href="#"><svg class="bi" width="24" height="24">
               <use xlink:href="#facebook"></use>
-            </svg></a></li>
+            </svg></a></li>    -->
 
             <li class="ms-3"><a target="_blank"  class="text" href="https://www.linkedin.com/company/thespacelabs/">
 
